Version 5.8.1   unreleased

    * Bump up to CedarBuild v0.9.6, just to stay up-to-date.

Version 5.8.0   25 Nov 2015

    * Add PropertiesService as a service wrapper over PropertiesUtils.

Version 5.7.0   30 Oct 2015

    * Improve the toString() output for ValidationErrors and InvalidDataException.
    * Make more improvements to nested tab history and bookmarks.
      - Get rid of initialization handler in ModuleNestedTabPanelView
      - Move tab initialization into ModuleTabPanelView, closer to when it's needed.
      - Nested tab panels must now implement IModuleNestedTabPanelView
      - Implement mechanism on IModuleTabPanelView to better manage selected tab state
      - Add new NestedTabSelectionHandler specific to ModuleNestedTabPanelView

Version 5.6.0   23 Oct 2015

    * Fix several problems with nested tab history and bookmarks.
      - Expose selectTabForView() in the IModuleTabPanelView interface
      - Add new method ModuleNestedTabPanelPresenter.selectThisTab()
      - Fix custom TabLayoutPanel so visual selection indicator works consistently

Version 5.5.0   20 Oct 2015

    * Fix isEnabled() and setEnabled() on the UTCTimeBox and UTCDateBox widgets.
    * Add new method AbstractWidgetUtils.getWidget().
    * Add new method AbstractWidgetUtils.getCodeserver().
    * Add new method AbstractWidgetUtils.setFocusAfterDisplay(Focusable)
    * Add setFocus() methods on AbstractWidgetUtils as aliases for setFocusOnDiplay().
    * Fix the nested tab implementation so it's possible replace nested tabs just like other tabs.
      - Add new class ModuleNestedTabPanelPresenter with different replaceModuleBody()
      - Add new method IModuleTabView.setContext() and deprecate the old version
      - Add new method IModuleTabView.getParentView(), tied to new setContext method()
      - Update ModuleTabView, ModuleTabPanelView, and ModuleNestedTabPanelView for new getContext()

Version 5.4.0   25 Sep 2015
